create basic layout of the app

--- a/index.html
+++ b/index.html
@@ -4,8 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To do list</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <header class="header">
+            <h1>TO DO LIST</h1>
+        </header>
+        <main class="main">
+            <section class="input">
+                <input id="enterTask" type="text">
+                <button id="addTask">ADD TASK</button>
+            </section>
+            <section class="list">
+
+            </section>
+        </main>
+        <footer class="footer">
+            <h3>AN APPLICATION BY <a href="https://www.linkedin.com/in/vivek-thakur-a41a22323/" target="_blank">VIVEK THAKUR</a></h3>
+        </footer>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
