create the feature to enter and add new tasks to the list

--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
                 <input id="enterTask" type="text">
                 <button id="addTask">ADD TASK</button>
             </section>
-            <section class="list">
-
-            </section>
+            <section class="list"></section>
         </main>
         <footer class="footer">
             <h3>AN APPLICATION BY <a href="https://www.linkedin.com/in/vivek-thakur-a41a22323/" target="_blank">VIVEK THAKUR</a></h3>
