--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
                 <button id="addTask">ADD TASK</button>
             </section>
             <section class="list"></section>
+            <ul class="contextMenu">
+                <li id="edit">EDIT</li>
+                <li id="delete">DELETE</li>
+            </ul>
         </main>
         <footer class="footer">
             <h3>AN APPLICATION BY <a href="https://www.linkedin.com/in/vivek-thakur-a41a22323/" target="_blank">VIVEK THAKUR</a></h3>
