--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
+    <span class="container">
         <header class="header">
             <h1>TO DO LIST</h1>
         </header>
@@ -25,7 +25,7 @@
         <footer class="footer">
             <h3>AN APPLICATION BY <a href="https://www.linkedin.com/in/vivek-thakur-a41a22323/" target="_blank">VIVEK THAKUR</a></h3>
         </footer>
-    </div>
+    </span>
     <script src="script.js"></script>
 </body>
 </html>
