--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
                 <button id="addTask">ADD TASK</button>
             </section>
             <section class="list"></section>
+            <section class="options">
+                <button id="clearAll">CLEAR ALL</button>
+                <button id="progress">SHOW PROGRESS</button>
+            </section>
             <ul class="contextMenu">
                 <li id="edit">EDIT</li>
                 <li id="delete">DELETE</li>
