add feature to edit existing tasks

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <li id="edit">EDIT</li>
                 <li id="delete">DELETE</li>
             </ul>
+            <input id="editInput" type="text">
         </main>
         <footer class="footer">
             <h3>AN APPLICATION BY <a href="https://www.linkedin.com/in/vivek-thakur-a41a22323/" target="_blank">VIVEK THAKUR</a></h3>
