add feature to show and hide progress

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
             <section class="options">
                 <button id="clearAll">CLEAR ALL</button>
                 <button id="progress">SHOW PROGRESS</button>
+                <button id="hideProgress">HIDE PROGRESS</button>
             </section>
+            <p id="progressReport"></p>
             <ul class="contextMenu">
                 <li id="edit">EDIT</li>
                 <li id="delete">DELETE</li>
